--- a/rumen/1_3.ipynb
+++ b/rumen/1_3.ipynb
@@ -165,12 +165,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<MseLossBackward object at 0x7f68950ceb00>\n<AddmmBackward object at 0x7f682dfa47b8>\n<AccumulateGrad object at 0x7f689ea094e0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(loss.grad_fn)\n",
+    "print(loss.grad_fn.next_functions[0][0]) # linear\n",
+    "print(loss.grad_fn.next_functions[0][0].next_functions[0][0]) #relu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "conv1.bias.grad before backward\ntensor([0., 0., 0., 0., 0., 0.])\nconv1.bias.grad after backward\ntensor([-0.0100, -0.0025, -0.0024,  0.0232, -0.0103, -0.0138])\n"
+     ]
+    }
+   ],
+   "source": [
+    "net.zero_grad()\n",
+    "\n",
+    "print('conv1.bias.grad before backward')\n",
+    "print(net.conv1.bias.grad)\n",
+    "\n",
+    "loss.backward()\n",
+    "\n",
+    "print('conv1.bias.grad after backward')\n",
+    "print(net.conv1.bias.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(loss.grad_fn)"
+    "# learning_rate = 0.01\n",
+    "# for f in net.parameters():\n",
+    "#     f.data.sub_(f.grad.data * learning_rate)\n",
+    "\n",
+    "import torch.optim as optim\n",
+    "\n",
+    "# 创建优化器(optimizer）\n",
+    "optimizer = optim.SGD(net.parameters(), lr=0.01)\n",
+    "\n",
+    "# 在训练的迭代中：\n",
+    "optimizer.zero_grad()   # 清零梯度缓存\n",
+    "output = net(input)\n",
+    "loss = criterion(output, target)\n",
+    "loss.backward()\n",
+    "optimizer.step()    # 更新参数"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
